test/tests/stages/18_structures/invalid_types/initializers/non_constant_static_init.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: pair
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Int: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        CCompoundInit: 
          List[2]: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 1
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 2
                None: 
              None: 
          None: 
        Structure: 
          TIdentifier: pair
          Bool: 0
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: y
        CSingleInit: 
          CVar: 
            TIdentifier: x
            None: 
          None: 
        Structure: 
          TIdentifier: pair
          Bool: 0
        None: 
